src-ken&y/objects/Tax_Book__c.object
<CustomObject>
    <customHelpPage>Help_Books</customHelpPage>
    <description>Tax Book related to a Company</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Company.</description>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipName>Tax_Books</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Corporate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this tax book is the corporate tax book for the selected company.</description>
        <inlineHelpText>If selected, this is the corporate book. Otherwise, it is a tax book.</inlineHelpText>
        <label>Corporate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Tax_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent corporate book for this tax book.</description>
        <inlineHelpText>Lookup (Book). For tax books this is the parent book.</inlineHelpText>
        <label>Book</label>
        <referenceTo>Tax_Book__c</referenceTo>
        <relationshipLabel>Tax Books</relationshipLabel>
        <relationshipName>Tax_Books</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Book</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Book Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Books</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Tax_Book_cannot_be_Corporate</fullName>
        <active>true</active>
        <errorConditionFormula>Corporate__c &amp;&amp;  Tax_Book__r.Corporate__c</errorConditionFormula>
        <errorDisplayField>Corporate__c</errorDisplayField>
        <errorMessage>A Tax Book cannot be marked as a Corporate Book.</errorMessage>
    </validationRules>
</CustomObject>